--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
     <head>
         <meta charset="utf-8">
         <title>Main page</title>
-        <script src="game.js"></script>
         <body>
             <h1>ROCK, PAPER & SCISSORS</h1>
             <h3>Use your JS console to play the game! &#40;You can access to it with ctrl + shift + J&#41;.</h3>
+            <h3>When you're already there, press the button below to start the game</h3>
+            <input type="button" value="PRESS TO PLAY!" style="color: black; background-color: red; font-size: larger;">
+            <script src="game.js"></script>
         </body>
     </head>
 </html>
