Write a desc on the Readme and fix some typos Write a brief description of the project on the readme and also fix some typos along the files of the project.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Main page</title>
+        <title>Rock paper scissors</title>
         <body>
-            <h1>ROCK, PAPER & SCISSORS</h1>
-            <h3>Use your JS console to play the game! &#40;You can access to it with ctrl + shift + J&#41;.</h3>
+            <h1>ROCK PAPER SCISSORS</h1>
+            <h3>Use your web browser console to play the game! &#40;You can access to it with ctrl + shift + J&#41;.</h3>
             <h3>When you're already there, press the button below to start the game</h3>
             <input type="button" value="PRESS TO PLAY!" style="color: black; background-color: red; font-size: larger;">
             <script src="game.js"></script>
